@@ -30,20 +30,6 @@
 		<TD style="white-space: nowrap;">{if $assignment.paytypename}{$assignment.paytypename}{else}{trans("default")}{/if}</TD>
 	</TR>
 	<TR class="light">
-		<TD style="vertical-align: top;"><IMG src="img/time.gif" ALT=""></TD>
-		<TD style="width: 1%; vertical-align: top; white-space: nowrap;"><span class="bold">{trans("Locks:")}</span></TD>
-		<TD style="white-space: nowrap;">
-			{foreach from=$assignment.locks item=item key=key}
-				{foreach from=$item.days item=day key=daynr}
-					{$_DAYS[$daynr]}&nbsp;
-				{/foreach}
-				{trans("from:")} {$item.fhour|string_format:"%02d"}:{$item.fminute|string_format:"%02d"} 
-				{trans("to:")} {$item.thour|string_format:"%02d"}:{$item.tminute|string_format:"%02d"}
-				<br>
-			{/foreach}
-		</TD>
-	</TR>
-	<TR class="light">
 		<TD><IMG src="img/options.gif" ALT=""></TD>
 		<TD style="width: 1%; white-space: nowrap;">{trans("with invoice")}:</TD>
 		<TD>{if $assignment.invoice}{trans("yes")}{else}{trans("no")}{/if}</TD>
