@@ -15,6 +15,11 @@
 	</TR>
 	<TR>
 		<TD WIDTH="100%">
+			{include file="nodelocks.html"}
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH="100%">
 			{include file="customerinfobox.html" customerpanel=1}
 		</TD>
 	</TR>
