@@ -1,0 +1,66 @@
+<TR class="dark">
+	<TD style="width: 1%; white-space: nowrap;" class="fleftu" COLSPAN="2">{trans("Days:")}</TD>
+	<TD style="width: 1%; white-space: nowrap;" class="fbt">{trans("From:")}</TD>
+	<TD style="width: 1%; white-space: nowrap;" class="fbt">{trans("To:")}</TD>
+	<TD style="width: 97%;" class="frightu">&nbsp;</TD>
+</TR>
+{cycle name=locks values="light,lucid" print=false}
+{foreach from=$nodelocks item=nodelock}
+<TR class="{cycle name=locks}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')">
+	<TD style="width: 1%; white-space: nowrap;" COLSPAN="2">
+		{foreach from=$nodelock.days item=day key=daynr}
+			{$_DAYS[$daynr]}&nbsp;
+		{/foreach}
+	</TD>
+	<TD style="width: 1%; white-space: nowrap;">
+		{$nodelock.fhour|string_format:"%02d"}:{$nodelock.fminute|string_format:"%02d"}
+	</TD>
+	<TD style="width: 1%; white-space: nowrap;">
+		{$nodelock.thour|string_format:"%02d"}:{$nodelock.tminute|string_format:"%02d"}
+	</TD>
+	<TD style="width: 97%; text-align: right; white-space: nowrap;">
+		<A HREF="javascript:delNodeLock({$nodelock.id});"><IMG SRC="img/delete.gif" ALT="[ {trans("Delete")} ]" {tip text="Remove lock"}></A>
+	</TD>
+</TR>
+{foreachelse}
+<TR>
+	<TD style="width: 100%; text-align: center;" colspan="5">
+		<p>&nbsp;</p>
+		<p><span class="bold">{trans("No locks.")}</span></p>
+		<p>&nbsp;</p>
+	</TD>
+</TR>
+{/foreach}
+<TR class="light">
+	<TD COLSPAN="2" CLASS="ftop" style="white-space: nowrap;">
+		{foreach from=$_DAYS item=dayname key=daynr}
+		<input type="checkbox" name="days[{$daynr}]" id="lockdays_{$daynr}" value="1">
+		<label for="lockdays_{$daynr}">{$dayname}</label>
+		{/foreach}
+	</TD>
+	<TD class="ftop" style="white-space: nowrap;">
+		<select name="fhour">
+		{for $i = 0 to 23}
+			<option value="{$i}">{$i|string_format:"%02d"}</option>
+		{/for}
+		</select>:<select name="fminute">
+		{for $i = 0 to 59}
+			<option value="{$i}">{$i|string_format:"%02d"}</option>
+		{/for}
+		</select>
+	</TD>
+	<TD class="ftop" style="white-space: nowrap;">
+		<select name="thour">
+		{for $i = 0 to 23}
+			<option value="{$i}">{$i|string_format:"%02d"}</option>
+		{/for}
+		</select>:<select name="tminute">
+		{for $i = 0 to 59}
+			<option value="{$i}">{$i|string_format:"%02d"}</option>
+		{/for}
+		</select>
+	</TD>
+	<TD style="text-align: right; white-space: nowrap;" CLASS="ftop" ROWSPAN="2">
+		<A id="nodelockaddlink" HREF="javascript:addNodeLock();" {tip text="Add new lock"}>{trans("Add")} <IMG SRC="img/save.gif" alt=""></A>
+	</TD>
+</TR>
