@@ -106,6 +106,7 @@ version ? (????-??-??):
   - daemon tc-new: fix empty mac segfault [chilan]
   - invoice_pdf: %bankaccount substitution for invoice from division header and footer [chilan]
   - tcpdf support for invoices [prezes_kk]
+  - assignmentlocks -> nodelocks [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
